--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
-  <title>My Recipes</title>
+  <meta charset='UTF-8'>
+  <title>Recipe Index</title>
 </head>
 <body>
-
 <h1>Recipe Index</h1>
-
 <ul>
-  <li><a href="recipes/sample-recipe.html">Sample Recipe</a></li>
+  <li><a href='recipes/best-damn-instant-pot-pulled-pork.html'>Best Damn Instant Pot Pulled Pork</a></li>
+  <li><a href='recipes/caribbean-jerk-pork-bowl-with-pineapple-salsa.html'>Caribbean Jerk Pork Bowl with Pineapple Salsa</a></li>
+  <li><a href='recipes/chicken-chop-suey.html'>Chicken Chop Suey</a></li>
+  <li><a href='recipes/chicken-in-a-pot-with-lemon-orzo.html'>Chicken in a Pot with Lemon Orzo</a></li>
+  <li><a href='recipes/crock-pot-honey-sesame-chicken.html'>Crock Pot Honey Sesame Chicken</a></li>
+  <li><a href='recipes/giadas-chicken-parmesan.html'>Giada's Chicken Parmesan</a></li>
+  <li><a href='recipes/juicy-cuban-mojo-pork-roast-chef-movie-recipe.html'>Juicy Cuban Mojo Pork Roast (Chef</a></li>
+  <li><a href='recipes/mcrib-patties.html'>McRib patties</a></li>
+  <li><a href='recipes/miso-chicken-wegmans.html'>Miso Chicken (Wegmans)</a></li>
+  <li><a href='recipes/one-pot-mustard-chicken-and-orzo.html'>One Pot Mustard Chicken and Orzo</a></li>
+  <li><a href='recipes/pineapple-chicken.html'>Pineapple Chicken</a></li>
+  <li><a href='recipes/rishia-zimmerns-chicken-with-shallots.html'>Rishia Zimmern’s Chicken With Shallots</a></li>
+  <li><a href='recipes/saucy-buffalo-chicken-tenders-no-breading.html'>Saucy Buffalo Chicken Tenders (No</a></li>
+  <li><a href='recipes/slow-cooker-chicken-thighs.html'>Slow Cooker Chicken Thighs</a></li>
+  <li><a href='recipes/slow-cooker-french-dip-sandwich.html'>Slow Cooker French Dip Sandwich</a></li>
+  <li><a href='recipes/slow-cooker-texas-pulled-pork.html'>Slow Cooker Texas Pulled Pork</a></li>
+  <li><a href='recipes/white-castle-sliders.html'>White Castle Sliders</a></li>
+  <li><a href='recipes/yogurt-marinated-grilled-chicken-thighs.html'>Yogurt-Marinated Grilled Chicken</a></li>
 </ul>
-
 </body>
 </html>
