--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Dinosaur Bar-B-Que Recipes</title></head><body>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Dinosaur Bar-B-Que Recipes</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head><body>
 <h1>Dinosaur Bar-B-Que – Recipe Index</h1>
 <h2>Beef</h2><ul>
 <li><a href='recipes/019_beef-short-ribs-braised-in-bbq-red-wine-sauce.html'>Beef Short Ribs Braised in BBQ Red Wine Sauce</a></li>
