--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="css/style.css">
 </head><body>
 <h1>Dinosaur Bar-B-Que – Recipe Index</h1>
 <h2>Beef</h2><ul>
